chore: migrate finalize() to Cleaner in KeyValueLeafPage and NodeStorageEngineWriter
finalize() has been deprecated since Java 9 (JEP 421) and is on the
removal track. Both surviving overrides in sirix-core were leak-detection
hooks rather than actual resource releasers (close() handles real
cleanup), so a Cleaner-based replacement is a one-for-one swap with
strictly better semantics:

  * Cleaner runs the action on a dedicated cleaner thread, not the GC
    thread, so a slow/log-heavy action doesn't pause the collector.
  * No object resurrection — the action cannot make `this` reachable
    again, which finalize() infamously could.
  * Survives the eventual removal of Object.finalize() in a future JDK.
  * Zero-overhead on the production path: KeyValueLeafPage's detector is
    only registered when DEBUG_MEMORY_LEAKS is on; NodeStorageEngineWriter
    registers unconditionally (cheap — one Cleanable per writer, ~handful
    of writers per session).

The detector state is held in a static inner class (LeakDetectorState)
that captures only the diagnostic facts (trxId, pageKey, indexType,
revision, creationStackTrace) plus an AtomicBoolean that close() flips.
Capturing the enclosing instance would have made the page strongly
reachable through the Cleaner queue, defeating the whole point. close()
sets state.closed = true; the detector reads it and skips the leak log
when set.

Eliminates the two `finalize() in Object has been deprecated and marked
for removal` warnings during compilation. All 8859 sirix-core tests
remain green.